# reqwest-basic-auth-example

./: Cargo.toml  README.md
src/: main.rs
